Fix star size on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -66,7 +66,7 @@ td.avatar-cell { height: 64px; }
 .chat-sender { }
 .chat-timestamp { color: #888; }
 
-.favorite-star { width: 15px; height: 15px; cursor: pointer; }
+.favorite-star { width: 15px; height: 15px; max-width: none; cursor: pointer; }
 .favorite-star-big { width: 30px; height: 30px; cursor: pointer; }
 
 #net-map { height: 500px; }
